--- a/.env
+++ b/.env
@@ -29,5 +29,5 @@ APP_SECRET=39e05f76f26fef321b39e4a20978ee35
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL=postgresql://map_user:map123pass@127.0.0.1:5432/map_db
 ###< doctrine/doctrine-bundle ###
