--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,15 +1,25 @@
 security:
+    encoders:
+        App\Entity\User: bcrypt
+
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
+        # used to reload user from session & other features (e.g. switch_user)
+        database_users:
+            entity: { class: App\Entity\User, property: email }
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: lazy
-            provider: users_in_memory
-
+            anonymous: true
+            form_login:
+                csrf_token_generator: security.csrf.token_manager
+                login_path: map_index
+                check_path: map_index
+                default_target_path: map_index
+            logout:
+                path: map_logout
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
@@ -21,3 +31,5 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
