--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "mapbox-gl": "^1.8.1"
+        "mapbox-gl": "^1.8.1",
+        "perfect-scrollbar": "^1.5.0"
     }
 }
